Move example app into example/

--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-  <script src="peg-0.8.0.min.js"></script>
 </head>
 <body>
   <textarea id="score">INS 0 1 ;
@@ -71,7 +70,7 @@ whitespace
 eol
   = ";\n"
 </textarea>
-  <script src="musicn.js"></script>
+  <script src="musicn.bundle.js"></script>
 
 
 </body>
