--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+  <style type="text/css">
+    #score {
+    font-size: 50px;
+    width: 90%;
+    height: 90%;
+    align: center;
+    }
+  </style>
 </head>
 <body>
   <textarea id="score">INS 0 1 ;
